--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,19 +1,68 @@
-.myCol{
-    margin-top: auto;
-    margin-bottom: auto;
+.search-box{
+    width: 100%;
+    height : 200px;
 }
 
-.center {
+.search-box-col{
+    background: rgba(0, 0, 0, 0.65);
+    width : 100%;
+}
+
+.box-row{
+    margin-top : 400px;
+}
+
+.tab{
+    width:100%;
+    height : 80px;
+    border : 2px green solid;
+}
+
+.search {
     margin: auto;
     width: 50%;
-    border: 3px solid green;
-    padding: 10px;
+    padding-top : 25px;
+  }
+  .search-form:focus:not([readonly]) {
+    border: 1px solid #f48fb1;
+    box-shadow: 0 0 0 1px #f48fb1;
+  }
+  .search-form {
+    border: 1px solid #f48fb1;
+    box-shadow: 0 0 0 1px #f48fb1;
   }
 
-  .form-control{
+  .button{
+    border: 1px solid #f48fb1;
+    box-shadow: 0 0 0 1px #f48fb1;
+    color: #f48fb1
+    } 
+
+
+.form-control{
         border-color: #28a745;
     } 
 
-    .button{
-        background-color:white; 
-    } 
+
+
+.catg{
+    text-align:center;
+    display:table;
+    margin : auto auto;
+}
+
+h1{
+    vertical-align:middle;
+    display:table-cell;
+    color : white;
+}
+
+h1:hover{
+    cursor: pointer;
+}
+
+
+.myRow{
+    margin-top : 15px;
+}
+
