--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
-body {
-  font-family: sans-serif;
-  background: #f9f9f9;
-  overflow:hidden;
-}
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css);
 
+* { font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif'; }
+
+body{
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
 
 section {
   height: 100vh;
@@ -14,4 +17,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+
+
+
+
 
